version 3.6.0 / 2020-XX-YY

  libcw:

  - enabling ALSA's configuration of HW period size.

    libcw's ALSA code now tries to configure HW period size to be
    smaller than in previous versions of code. Normally the period
    size could be in range of hundreds of frames, now it's possible to
    have the period size of tens, or low hundreds of frames.
    
    Decreased period size should lead to better behaviour of ALSA's
    writei() function: the function should now properly block during
    write of samples to ALSA handle in all circumstances.

    Correct blocking behaviour of writei() should lead to correct
    behaviour of libcw's internal keying mechanism, responsible
    e.g. for calling keying callbacks registered by programs using
    libcw (such as cwdaemon). Such callbacks will be now called at
    proper time intervals that match duration of enqueued
    dots/dashes/spaces.

    Initial report of incorrect behaviour, initial debugging, and
    confirmation of a fix come from Matthew M5EVT. Thanks Matthew!


----------------------------------------------------------------------------
    

version 3.5.1 / 2017-02-XX

  libcw:

  - fixing a bug in libcw/generator that may have lead to a key being
    permanently in "down" state upon silencing a generator.

    If cwdaemon using libcw with NULL or Console output was generating
    tones from user input, and received ESC-4 escape request ("Abort
    currently sent message"), it was possible that while the message
    was interrupted, the key remained in "down" state.

    The fix in libcw makes sure that upon request to stop generating
    tones, the key always goes up, regardless of audio output type.

    The bug was reported and investigated, and fix was provided by
    Csahok Zoltan. Many thanks Zoli!

  - Library soname/version changed from 6.5.1 to 6.6.1.


----------------------------------------------------------------------------


version 3.5.0 / 2015-10-06

  libcw:
